--- a/ExerciceCV/SCRIPT/style.css
+++ b/ExerciceCV/SCRIPT/style.css
@@ -1,7 +1,7 @@
 body
 {
 	width: 60%;
-	text-align: center;
+	text-align: justify;
 	background-color: black;
 	color: chartreuse;
 	font-family: monospace;
@@ -23,6 +23,11 @@ a:hover
 	font-size: 25px;
 }
 
+h1
+{
+	text-align: center;
+}
+
 h3
 {
 	font-size: 20px;
@@ -31,4 +36,9 @@ h3
 li
 {
 	list-style: none;
+}
+
+input, select
+{
+	margin: 15px;
 }
