--- a/ExerciceCV/SCRIPT/style.css
+++ b/ExerciceCV/SCRIPT/style.css
@@ -1,9 +1,9 @@
 body
 {
 	width: 60%;
-	text-align: center;
-	background-color: black;
-	color: chartreuse;
+	text-align: justify;
+	background-color: lightgray;
+	color: black;
 	font-family: monospace;
 	margin: auto;
 }
@@ -31,4 +31,10 @@ h3
 li
 {
 	list-style: none;
+}
+
+footer
+{
+	padding-top: 25px;
+	text-align: center;
 }
