--- a/ExerciceCV/SCRIPT/style.css
+++ b/ExerciceCV/SCRIPT/style.css
@@ -1,3 +1,9 @@
+@font-face
+{
+	font-family: "forgetica";
+	src: url('../FONT/SansForgetica-Regular.otf');
+}
+
 body
 {
 	width: 60%;
@@ -21,20 +27,57 @@ a:visited
 a:hover
 {
 	font-size: 25px;
+	font-family: "forgetica";
+}
+
+h1
+{
+	font-family: "forgetica";
+	text-align: center;
+	font-size: 40px;
+	color: black;
+}
+
+h2
+{
+	text-align: center;
+	font-size: 25px;
 }
 
 h3
 {
 	font-size: 20px;
+	border-left-style: solid;
+	padding-left: 10px;
 }
 
 li
 {
-	list-style: none;
+	list-style: circle;
 }
 
 footer
 {
-	padding-top: 25px;
+	margin-top: 25px;
 	text-align: center;
+	border-top: 1px solid black;
+	padding-top: 15px;
+}
+
+.turn
+{
+	animation-name: turn;
+	animation-duration: 5s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate-reverse;
+	animation-timing-function: linear;
+	font-size: 25px;
+	text-align: center;
+}
+
+@keyframes turn
+{
+    0%  {transform: rotate(0deg);}
+    25% {transform: rotate(25deg);}
+    50% {transform: rotate(50deg);}
 }
