--- a/ExerciceCV/SCRIPT/style.css
+++ b/ExerciceCV/SCRIPT/style.css
@@ -68,3 +68,23 @@ footer
 	text-align: center;
 	padding-top: 20px;
 }
+
+.turn
+{
+	animation-name: turn;
+	animation-duration: 5s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate-reverse;
+	animation-timing-function: linear;
+	font-size: 25px;
+	text-align: center;
+}
+
+@keyframes turn
+{
+    0%  {transform: rotate(0deg);}
+    25% {transform: rotate(25deg);}
+    50% {transform: rotate(50deg);}
+}
+
+
