--- a/ExerciceCV/SCRIPT/style.css
+++ b/ExerciceCV/SCRIPT/style.css
@@ -14,6 +14,22 @@ body
 	margin: auto;
 }
 
+li
+{
+	list-style: circle;
+}
+
+nav
+{
+	text-align: center;
+}
+
+nav ul li
+{
+	display: inline-block;
+	text-align: center;
+}
+
 a
 {
 	color: green;
@@ -26,8 +42,20 @@ a:visited
 
 a:hover
 {
-	font-size: 25px;
+	font-size: 20px;
 	font-family: "forgetica";
+}
+
+nav ul li a:hover
+{
+	font-size: 13px;
+	font-family: monospace;
+	font-weight: bold;
+}
+
+nav ul li a:visited
+{
+	color: green;
 }
 
 h1
@@ -49,11 +77,6 @@ h3
 	font-size: 20px;
 	border-left-style: solid;
 	padding-left: 10px;
-}
-
-li
-{
-	list-style: circle;
 }
 
 footer
