--- a/ExerciceCV/SCRIPT/style.css
+++ b/ExerciceCV/SCRIPT/style.css
@@ -28,6 +28,7 @@ nav ul li
 {
 	display: inline-block;
 	text-align: center;
+	padding: 5px;
 }
 
 a
@@ -96,6 +97,8 @@ footer
 	animation-timing-function: linear;
 	font-size: 25px;
 	text-align: center;
+	display: inline-block;;
+	padding: 15px;
 }
 
 @keyframes turn
