--- a/ExerciceGrid/SCRIPT/style.css
+++ b/ExerciceGrid/SCRIPT/style.css
@@ -1,3 +1,9 @@
+body
+{
+	background-color: black;
+	color: white;
+}
+
 .gridContainer
 {
 	display: grid;
@@ -88,6 +94,53 @@
 	grid-area: white8;
 }
 
+#white9
+{
+	background-color: white;
+	grid-area: white9;
+}
+
+#white10
+{
+	background-color: white;
+	grid-area: white10;
+}
+
+#white11
+{
+	background-color: white;
+	grid-area: white11;
+}
+
+#white12
+{
+	background-color: white;
+	grid-area: white12;
+}
+
+#white13
+{
+	background-color: white;
+	grid-area: white13;
+}
+
+#white14
+{
+	background-color: white;
+	grid-area: white14;
+}
+
+#white15
+{
+	background-color: white;
+	grid-area: white15;
+}
+
+#white16
+{
+	background-color: white;
+	grid-area: white16;
+}
 
 #red1
 {
@@ -95,10 +148,58 @@
 	grid-area: red1;
 }
 
+#red2
+{
+        background-color: red;
+        grid-area: red2;
+}
+
+#red3
+{
+        background-color: red;
+        grid-area: red3;
+}
+
+#red4
+{
+        background-color: red;
+        grid-area: red4;
+}
+
+#red5
+{
+        background-color: red;
+        grid-area: red5
+}
+
 #yellow1
 {
 	background-color: yellow;
 	grid-area: yellow1;
+}
+
+#yellow2
+{
+        background-color: yellow;
+        grid-area: yellow2;
+}
+
+#yellow3
+{
+        background-color: yellow;
+        grid-area: yellow3;
+}
+
+#yellow4
+{
+        background-color: yellow;
+        grid-area: yellow4;
+}
+
+#yellow5
+{
+        background-color: yellow;
+        grid-area: yellow5;
 }
 
 #blue1
@@ -112,3 +213,16 @@
 	background-color: blue;
 	grid-area: blue2;
 }
+
+#blue3
+{
+	background-color: blue;
+	grid-area: blue3;
+}
+
+#blue4
+{
+	background-color: blue;
+	grid-area: blue4;
+}
+
