--- a/ExerciceGrid/SCRIPT/style.css
+++ b/ExerciceGrid/SCRIPT/style.css
@@ -2,227 +2,236 @@ body
 {
 	background-color: black;
 	color: white;
+	font-family: monospace;
 }
 
 .gridContainer
 {
 	display: grid;
 	grid-template-areas: 
-	"white1 white1 white2 white2 white2 white2 white2 white2  white2 white3 white3 white3  white3  white3  white3 white3 white3 white4 white4 yellow1 yellow1"
-	"white1 white1 blue1  blue1  blue1  blue1  blue1  blue1   blue1  white5 white5 white5  blue2   blue2   blue2  blue2  blue2  white4 white4 yellow1 yellow1"
-	"white1 white1 blue1  blue1  blue1  blue1  blue1  blue1   blue1  white5 white5 white5  blue2   blue2   blue2  blue2  blue2  white4 white4 yellow1 yellow1"
-	"black1 black1 white6 white6 white6 black2 black2 white7  white7 white7 white8 yellow2 yellow2 yellow2 red1   red1   red2   white4 white4 yellow1 yellow1"
-	"black1 black1 white6 white6 white6 black2 black2 white7  white7 white7 white8 yellow2 yellow2 yellow2 red1   red1   red2   white4 white4 yellow1 yellow1"
-	"black1 black1 white6 white6 white6 black2 black2 white7  white7 white7 white8 yellow2 yellow2 yellow2 red1   red1   red2   white4 white4 yellow1 yellow1"
-	"black1 black1 white6 white6 white6 black2 black2 white7  white7 white7 white8 yellow2 yellow2 yellow2 red1   red1   red2   white4 white4 yellow1 yellow1"
-	"black1 black1 white6 white6 white6 black2 black2 yellow3 red3   red3   red3   blue3   blue3   blue3   white9 white9 white10 black3 black3 black3  black3"
+
+	'w1  w2  w2  w2  w2  w2  w2  w2  w3  w3  w3  w3  w3  w3  w3  w3  w4  y1'
+	'w1  b1  b1  b1  b1  b1  b1  b1  w5  w5  w5  b2  b2  b2  b2  b2  w4  y1'
+	'w1  b1  b1  b1  b1  b1  b1  b1  w5  w5  w5  b2  b2  b2  b2  b2  w4  y1'
+	'n1  w6  w6  n2  w7  w7  w7  w8  y2  y2  y2  r1  r1  r1  r1  r2  w4  y1'
+	'n1  w6  w6  n2  w7  w7  w7  w8  y2  y2  y2  r1  r1  r1  r1  r2  w4  y1'
+	'n1  w6  w6  n2  w7  w7  w7  w8  y2  y2  y2  r1  r1  r1  r1  r2  w4  y1'
+	'n1  w6  w6  n2  w7  w7  w7  w8  y2  y2  y2  r1  r1  r1  r1  r2  w4  y1'
+	'n1  w6  w6  n2  y3  r3  r3  r3  b3  b3  b3  w9  w9  w9  w9  w10 n3  n3'
+	'n1  w6  w6  n2  y3  r3  r3  r3  b3  b3  b3  w9  w9  w9  w9  w10 n3  n3'
+	'w11 r4  r4  n4  y4  w12 w12 w12 w12 w12 w13 w13 w13 w13 b4  y5  w14 w14'
+	'w11 r4  r4  n4  y4  w12 w12 w12 w12 w12 w13 w13 w13 w13 b4  y5  w14 w14'
+	'w11 r4  r4  n4  y4  w12 w12 w12 w12 w12 w13 w13 w13 w13 b4  y5  w14 w14'
+	'w11 r4  r4  n4  y4  r5  r5  r5  n5  n5  n5  n5  n5  n5  w15 w15 w15 w15'
+	'w16 w16 w16 w16 y4  r5  r5  r5  n5  n5  n5  n5  n5  n5  w15 w15 w15 w15'
 	;
+
 	grid-gap: 10px;
 	background-color: black;
 	height: 95vh;
 }
 
-#black1
+#n1
 {
 	background-color: black;
-	grid-area: black1;
+	grid-area: n1;
 }
 
-#black2
+#n2
 {
 	background-color: black;
-	grid-area: black2;
+	grid-area: n2;
 }
 
-#black3
+#n3
 {
 	background-color: black;
-	grid-area: black3;
+	grid-area: n3;
 }
 
-#black4
+#n4
 {
 	background-color: black;
-	grid-area: black4;
+	grid-area: n4;
 }
 
-#white1
+#w1
 {
 	background-color: white;
-	grid-area: white1;
+	grid-area: w1;
 }
 
-#white2
+#w2
 {
 	background-color: white;
-	grid-area: white2;
+	grid-area: w2;
 }
 
-#white3
+#w3
 {
 	background-color: white;
-	grid-area: white3;
+	grid-area: w3;
 }
 
-#white4
+#w4
 {
 	background-color: white;
-	grid-area: white4;
+	grid-area: w4;
 }
 
-#white5
+#w5
 {
 	background-color: white;
-	grid-area: white5;
+	grid-area: w5;
 }
 
-#white6
+#w6
 {
 	background-color: white;
-	grid-area: white6;
+	grid-area: w6;
 }
 
-#white7
+#w7
 {
 	background-color: white;
-	grid-area: white7;
+	grid-area: w7;
 }
 
-#white8
+#w8
 {
 	background-color: white;
-	grid-area: white8;
+	grid-area: w8;
 }
 
-#white9
+#w9
 {
 	background-color: white;
-	grid-area: white9;
+	grid-area: w9;
 }
 
-#white10
+#w10
 {
 	background-color: white;
-	grid-area: white10;
+	grid-area: w10;
 }
 
-#white11
+#w11
 {
 	background-color: white;
-	grid-area: white11;
+	grid-area: w11;
 }
 
-#white12
+#w12
 {
 	background-color: white;
-	grid-area: white12;
+	grid-area: w12;
 }
 
-#white13
+#w13
 {
 	background-color: white;
-	grid-area: white13;
+	grid-area: w13;
 }
 
-#white14
+#w14
 {
 	background-color: white;
-	grid-area: white14;
+	grid-area: w14;
 }
 
-#white15
+#w15
 {
 	background-color: white;
-	grid-area: white15;
+	grid-area: w15;
 }
 
-#white16
+#w16
 {
 	background-color: white;
-	grid-area: white16;
+	grid-area: w16;
 }
 
-#red1
+#r1
 {
 	background-color: red;
-	grid-area: red1;
+	grid-area: r1;
 }
 
-#red2
+#r2
 {
-        background-color: red;
-        grid-area: red2;
+    background-color: red;
+    grid-area: r2;
 }
 
-#red3
+#r3
 {
-        background-color: red;
-        grid-area: red3;
+    background-color: red;
+    grid-area: r3;
 }
 
-#red4
+#r4
 {
-        background-color: red;
-        grid-area: red4;
+    background-color: red;
+    grid-area: r4;
 }
 
-#red5
+#r5
 {
-        background-color: red;
-        grid-area: red5
+    background-color: red;
+    grid-area: r5
 }
 
-#yellow1
+#y1
 {
-	background-color: yellow;
-	grid-area: yellow1;
+	background-color: gold;
+	grid-area: y1;
 }
 
-#yellow2
+#y2
 {
-        background-color: yellow;
-        grid-area: yellow2;
+    background-color: gold;
+    grid-area: y2;
 }
 
-#yellow3
+#y3
 {
-        background-color: yellow;
-        grid-area: yellow3;
+    background-color: gold;
+    grid-area: y3;
 }
 
-#yellow4
+#y4
 {
-        background-color: yellow;
-        grid-area: yellow4;
+    background-color: gold;
+    grid-area: y4;
 }
 
-#yellow5
+#y5
 {
-        background-color: yellow;
-        grid-area: yellow5;
+    background-color: gold;
+    grid-area: y5;
 }
 
-#blue1
+#b1
 {
-	background-color: blue;
-	grid-area: blue1;
+	background-color: darkblue;
+	grid-area: b1;
 }
 
-#blue2
+#b2
 {
-	background-color: blue;
-	grid-area: blue2;
+	background-color: darkblue;
+	grid-area: b2;
 }
 
-#blue3
+#b3
 {
-	background-color: blue;
-	grid-area: blue3;
+	background-color: darkblue;
+	grid-area: b3;
 }
 
-#blue4
+#b4
 {
-	background-color: blue;
-	grid-area: blue4;
+	background-color: darkblue;
+	grid-area: b4;
 }
 
