--- a/ExerciceAnimationCSS/animation3D.css
+++ b/ExerciceAnimationCSS/animation3D.css
@@ -1,67 +1,125 @@
-.conteneur1
+.conteneur0
 {
-	background-color: lightgray;
 	height: 800px;
 	width: 1200px;
-	margin: auto;
+	background-color: lightgray;
+	border-radius: 15px;
+	text-align: center;
+	perspective:800px;
+	border: 3px solid black;
+}
+
+h1
+{
+	top: 355px;
+	left: 545px;
+	position: absolute;
+	font-family: monospace;
+}
+
+.conteneur1
+{
 	position: relative;
-	perspective:1200px;
+	animation: mouvement 5s infinite linear;
 }
 
 .conteneur2
 {
 	position: absolute;
-	background-color: lightgray;
-	transform: rotateX(90deg);
 	transform-style: preserve-3d;
-	top:100px;
-	left:100px;
+	animation: gigote 3s infinite linear;
 }
 .conteneur2 div
 {
 	top: 0;
 	left: 0;
 	margin: 0px;
-	height: 15px;
-	width: 15px;
+	height: 10px;
+	width: 10px;
+	padding: 10px;
 	border: 3px solid black;
 	border-radius: 5px;
-	display: block;
 	position: absolute;
 }
 
 .item1
 {
 	background-color: pink;
-	transform: rotateY(0deg) translateZ(150px);
+	transform: rotateY(0deg) translateZ(75px);
 }
 
 .item2
 {
 	background-color: white;
-	transform: rotateY(60deg) translateZ(150px);
+	transform: rotateY(60deg) translateZ(75px);
 }
 
 .item3
 {
 	background-color: lightgreen;
-	transform: rotateY(90deg) translateZ(150px);
+	transform: rotateY(120deg) translateZ(75px);
 }
 
 .item4
 {
 	background-color: orange;
-	transform: rotateY(120deg) translateZ(150px);
+	transform: rotateY(180deg) translateZ(75px);
 }
 
 .item5
 {
 	background-color: turquoise;
-	transform: rotateY(150deg) translateZ(150px);
+	transform: rotateY(240deg) translateZ(75px);
 }
 
 .item6
 {
 	background-color: hotpink;
-	transform: rotateY(180deg) translateZ(150px);
+	transform: rotateY(300deg) translateZ(75px);
+}
+
+@keyframes gigote
+{
+	0%
+	{
+		transform: rotateY(-360deg) rotateX(-360deg);
+	}
+
+	100%
+	{
+		transform: rotateY(0deg) rotateX(0deg);
+	}
+}
+
+@keyframes mouvement
+{
+	0%
+	{
+		top: 130px;
+		left: 150px;
+	}
+
+	25%
+	{
+		top: 130px;
+		left: 1050px;
+	}
+
+	50%
+	{
+		top: 680px;
+		left: 1050px;
+	}
+
+	75%
+	{
+		top: 680px;
+		left: 150px;
+	}
+
+	100%
+	{
+		top: 130px;
+		left: 150px;
+	}
 }
