--- a/ExercicePositionnement/5b_Avec_Box_Sizing_relative/SCRIPT/style.css
+++ b/ExercicePositionnement/5b_Avec_Box_Sizing_relative/SCRIPT/style.css
@@ -1,7 +1,6 @@
 div
 {
 	border: 2px solid black;
-	position: absolute;
 	box-sizing: border-box;
 }
 
@@ -19,6 +18,7 @@ div
 	width: 200px;
 	left: 25px;
 	top: 25px;
+	position: relative;
 }
 
 .blue
@@ -27,8 +27,9 @@ div
 	opacity: 0.8;
 	height: 200px;
 	width: 200px;
-	right: 25px;
-	top: 25px;
+	left: 250px;
+	top: -175px;
+	position: relative;
 }
 
 .chocolat
@@ -38,7 +39,8 @@ div
 	height: 200px;
 	width: 200px;
 	left: 25px;
-	bottom: 25px;
+	top: -150px;
+	position: relative;
 }
 
 
@@ -47,7 +49,8 @@ div
 	background-color: yellow;
 	height: 200px;
 	width: 200px;
-	right: 25px;
-	bottom: 25px;
+	left: 250px;
+	top: -350px;
+	position: relative;
 }
 
