--- a/ExercicesResponsive/SCRIPT/Exercice_Grille.css
+++ b/ExercicesResponsive/SCRIPT/Exercice_Grille.css
@@ -57,17 +57,29 @@ ul li
 	visibility: hidden;
 }
 
-.lg3
-{
-	width: calc(100%/3);
-}
+.lg1 {width: calc(100%/1); }
+.lg2 {width: calc(100%/2); }
+.lg3 {width: calc(100%/3); }
+.lg4 {width: calc(100%/4); }
+.lg5 {width: calc(100%/5); }
+.lg6 {width: calc(100%/6); }
+.lg7 {width: calc(100%/7); }
+.lg8 {width: calc(100%/8); }
+.lg9 {width: calc(100%/9); }
+.lg10{width: calc(100%/10);}
 
 @media screen and (max-width:900px)
 {
-	.md1
-	{
-		width: calc(100%/1);
-	}
+	.md1 {width: calc(100%/1); }
+	.md2 {width: calc(100%/2); }
+	.md3 {width: calc(100%/3); }
+	.md4 {width: calc(100%/4); }
+	.md5 {width: calc(100%/5); }
+	.md6 {width: calc(100%/6); }
+	.md7 {width: calc(100%/7); }
+	.md8 {width: calc(100%/8); }
+	.md9 {width: calc(100%/9); }
+	.md10{width: calc(100%/10);}
 
 	.conteneur
 	{
@@ -80,10 +92,16 @@ ul li
 
 @media only screen and (max-width:700px)
 {
-	.sm1
-	{
-		width: calc(100%/1);
-	}
+	.sm1 {width: calc(100%/1); }
+	.sm2 {width: calc(100%/2); }
+	.sm3 {width: calc(100%/3); }
+	.sm4 {width: calc(100%/4); }
+	.sm5 {width: calc(100%/5); }
+	.sm6 {width: calc(100%/6); }
+	.sm7 {width: calc(100%/7); }
+	.sm8 {width: calc(100%/8); }
+	.sm9 {width: calc(100%/9); }
+	.sm10{width: calc(100%/10);}
 
 	ul li
 	{
